force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/maps__AdvRouteContinuousTravel__c.object-meta.xml
<CustomObject>
    <description>This holds the possible start and stop locations for users</description>
    <label>Maps Advanced Route Continuous Travel</label>
    <nameField>
        <label>Maps Planner Continuous Travel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Continuous Travels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>