force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__Address__c.field-meta.xml
<CustomField>
    <fullName>maps__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>