force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__AdvRouteSettings__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteSettings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Advanced Route settings</description>
    <label>Maps Advanced Route Settings</label>
    <referenceTo>maps__AdvRouteSettings__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Continuous Travel</relationshipLabel>
    <relationshipName>AdvRouteContinuousTravels</relationshipName>
    <type>Lookup</type>
</CustomField>