force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__City__c.field-meta.xml
<CustomField>
    <fullName>maps__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>