force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__Country__c.field-meta.xml
<CustomField>
    <fullName>maps__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>