force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__Default__c.field-meta.xml
<CustomField>
    <fullName>maps__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be considered the users home base</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>