force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndAddress__c.field-meta.xml
<CustomField>
    <fullName>maps__EndAddress__c</fullName>
    <label>End Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>