force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndCountry__c.field-meta.xml
<CustomField>
    <fullName>maps__EndCountry__c</fullName>
    <label>End Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>