force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndDate__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDate__c</fullName>
    <description>This is the date that the continuous travel should stop being used</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>