force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndLatLong__c.field-meta.xml
<CustomField>
    <fullName>maps__EndLatLong__c</fullName>
    <description>This holds the ending latitude and longitude of the continuous travel</description>
    <label>End Lat/Long</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>