force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndLocation__c.field-meta.xml
<CustomField>
    <fullName>maps__EndLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Location</label>
    <type>Checkbox</type>
</CustomField>