force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndName__c.field-meta.xml
<CustomField>
    <fullName>maps__EndName__c</fullName>
    <label>End Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>