force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndPostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__EndPostalCode__c</fullName>
    <label>End Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>