force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__EndStateProvince__c.field-meta.xml
<CustomField>
    <fullName>maps__EndStateProvince__c</fullName>
    <label>End State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>