force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__IsContinuous__c.field-meta.xml
<CustomField>
    <fullName>maps__IsContinuous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to flag the record as continuous travel</description>
    <label>Continuous</label>
    <type>Checkbox</type>
</CustomField>