force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__IsTravel__c.field-meta.xml
<CustomField>
    <fullName>maps__IsTravel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to flag the record as travel</description>
    <label>Travel</label>
    <type>Checkbox</type>
</CustomField>