force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__LatLong__c.field-meta.xml
<CustomField>
    <fullName>maps__LatLong__c</fullName>
    <description>This holds the latitude and longitude of the continuous travel</description>
    <label>Lat/Long</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>