force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__StartLocation__c.field-meta.xml
<CustomField>
    <fullName>maps__StartLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Location</label>
    <type>Checkbox</type>
</CustomField>