force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__StartName__c.field-meta.xml
<CustomField>
    <fullName>maps__StartName__c</fullName>
    <label>Start Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>