force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__StateProvince__c.field-meta.xml
<CustomField>
    <fullName>maps__StateProvince__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>