force-app/main/default/objects/maps__AdvRouteContinuousTravel__c/fields/maps__Type__c.field-meta.xml
<CustomField>
    <fullName>maps__Type__c</fullName>
    <description>This is the type of continuous travel</description>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>